--- a/Lab4/Calculator/Calculator.html
+++ b/Lab4/Calculator/Calculator.html
@@ -183,9 +183,9 @@
 
       function EnterOperator(op) {
         let last = inp.value[inp.value.length - 1];
-        if (last == "+" || last == "-" || last == "*" || last == "/") {
-          inp.value = inp.value.slice(0, -1);
-        }
+        // if (last == "+" || last == "-" || last == "*" || last == "/") {
+        //   inp.value = inp.value.slice(0,-1);
+        // }
         inp.value += op;
       }
 
