Refactor slideshow next function to accept circular parameter; add styles for marbles; create initial structure for Lab6 tasks

--- a/Lab4/SlideShow/index.html
+++ b/Lab4/SlideShow/index.html
@@ -54,7 +54,7 @@
         counter.textContent = currentIndex + 1;
       }
 
-      function next() {
+      function next(circular) {
         if (currentIndex < images.length - 1) {
           currentIndex++;
           updateImage();
